Add page for The Box Timers privacy policy

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   :root {
     --body-background: #101010;
     --body-color: #606060;
-    --header-color: #f7f6f4;
+    --header-color: #e2e2e2;
   }
 }
 
