--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --body-background: #101010;
-    --body-color: #606060;
+    --body-color: #a1a1a1;
     --header-color: #e2e2e2;
   }
 }
@@ -9,7 +9,7 @@
 @media (prefers-color-scheme: light) {
   :root {
     --body-background: #f7f6f4;
-    --body-color: #777777;
+    --body-color: #666666;
     --header-color: #111111;
   }
 }
