--- a/style.css
+++ b/style.css
@@ -96,6 +96,25 @@ a:focus {
   margin-bottom: 0px;
 }
 
+.post-title {
+  margin-bottom: 0px;
+}
+
+.post-date {
+  margin-top: 0.5em;
+  margin-bottom: 3em;
+}
+
+@media only screen and (max-width: 767px) {
+  .post-title {
+    text-align: center;
+  }
+
+  .post-date {
+    text-align: center;
+  }
+}
+
 blockquote {
   font-family: var(--quote-font-family);
   font-style: italic;
@@ -127,6 +146,15 @@ blockquote::after {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 4em;
+}
+@media only screen and (max-width: 767px) {
+  .header {
+    flex-direction: column;
+  }
+
+  .logo {
+    margin-bottom: 1em;
+  }
 }
 
 .logo {
@@ -162,6 +190,10 @@ blockquote::after {
 .navigation a {
   text-decoration: none;
   margin-left: 1em;
+}
+
+.navigation a:first-child {
+  margin-left: 0px;
 }
 
 .navigation a:hover {
