Fix wrong site ID for Fathom

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -45,7 +45,7 @@ const disableTracking = import.meta.env.DEV;
   disableTracking ? null : (
     <script
       src="https://cdn.usefathom.com/script.js"
-      data-site="RFZSCRLZ"
+      data-site="CIYVRBZT"
       defer
     />
   )
