--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,7 @@ import Page from "@layouts/Page.astro";
 ---
 
 <Page
-  title="About"
+  title="About me"
   description="My name is Edvin and I enjoy all things product management, suffering during long CrossFit workouts and creating things online."
 >
   <p>
