--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -8,42 +8,38 @@ import Page from "@layouts/Page.astro";
   description="How I handle your data when visiting the site."
 >
   <main>
-    <Wrap>
-      <p>
-        I want to process as little personal information as possible when you
-        use my website. That's why I've chosen Fathom Analytics for my website
-        analytics, <mark>which doesn't use cookies</mark> and complies with the GDPR,
-        ePrivacy (including PECR), COPPA and CCPA.
-      </p>
-      <p>
-        Using this privacy-friendly website analytics software, your IP address
-        is only briefly processed, and <mark
-          >I have no way of identifying you</mark
-        >. As per the CCPA, your personal information is de-identified. You can
-        read more about this on <a
-          href="https://usefathom.com/compliance"
-          target="_blank"
-          title="Fathom Analytics"
-          rel="noopener noreferrer">Fathom Analytics' website</a
-        >.
-      </p><p>
-        The purpose of me using this software is to understand my website
-        traffic in the most privacy-friendly way possible so that I can
-        continually improve my website. The lawful basis as per the GDPR is "f);
-        where our legitimate interests are to improve our website and business
-        continually." As per the explanation, no personal data is stored over
-        time.
-      </p>
-      <p>
-        <a
-          href="https://usefathom.com/ref/SACEEW"
-          target="_blank"
-          title="Get a $10 credit for Fathom Analytics by using my referral link"
-          rel="noopener noreferrer"
-        >
-          Get a $10 credit for Fathom Analytics by using my referral link
-        </a>
-      </p>
-    </Wrap>
+    <p>
+      I want to process as little personal information as possible when you use
+      my website. That's why I've chosen Fathom Analytics for my website
+      analytics, <mark>which doesn't use cookies</mark> and complies with the GDPR,
+      ePrivacy (including PECR), COPPA and CCPA.
+    </p>
+    <p>
+      Using this privacy-friendly website analytics software, your IP address is
+      only briefly processed, and <mark>I have no way of identifying you</mark>.
+      As per the CCPA, your personal information is de-identified. You can read
+      more about this on <a
+        href="https://usefathom.com/compliance"
+        target="_blank"
+        title="Fathom Analytics"
+        rel="noopener noreferrer">Fathom Analytics' website</a
+      >.
+    </p><p>
+      The purpose of me using this software is to understand my website traffic
+      in the most privacy-friendly way possible so that I can continually
+      improve my website. The lawful basis as per the GDPR is "f); where our
+      legitimate interests are to improve our website and business continually."
+      As per the explanation, no personal data is stored over time.
+    </p>
+    <p>
+      <a
+        href="https://usefathom.com/ref/SACEEW"
+        target="_blank"
+        title="Get a $10 credit for Fathom Analytics by using my referral link"
+        rel="noopener noreferrer"
+      >
+        Get a $10 credit for Fathom Analytics by using my referral link
+      </a>
+    </p>
   </main>
 </Page>
