--- a/src/components/Articles.astro
+++ b/src/components/Articles.astro
@@ -10,27 +10,26 @@ export interface Props {
 const { headline, articles } = Astro.props;
 ---
 
-<Wrap cls="pt-24 pb-8 bg-amber-200 text-neutral-700">
-  <h2 class="text-neutral-900 mt-0 mb-8">{headline}</h2>
-  <div class="flex flex-col justify-between">
+<Wrap cls="pt-24 pb-12" innerCls="flex flex-col items-center">
+  <div class="flex flex-col justify-between w-full md:w-[720px]">
     {
       articles.map((article: any) => (
-        <div class="flex flex-col mb-8">
-          <a
-            href={article.url}
-            class="no-underline hover:decoration-4 decoration-amber-700"
-          >
-            <h3 class="mt-0 mb-2 text-2xl text-neutral-900">
-              {article.frontmatter.title}
-            </h3>
-          </a>
-          <div class="mb-4 text-xs text-amber-700">
-            <span class="mr-2">{formatDate(article.frontmatter.date)}</span>⋅
-            <span class="ml-2">
-              {article.frontmatter.readingTime} reading time
-            </span>
+        <>
+          <div class="flex flex-col mb-8">
+            <a
+              href={article.url}
+              class="no-underline hover:decoration-4 flex-grow"
+            >
+              <h2 class="mt-0 mb-2 text-xl">{article.frontmatter.title}</h2>
+            </a>
+            <div class="flex flex-row text-xs text-left text-neutral-500">
+              <span class="mr-2">{formatDate(article.frontmatter.date)}</span>⋅
+              <span class="ml-2">
+                {article.frontmatter.readingTime} reading time
+              </span>
+            </div>
           </div>
-        </div>
+        </>
       ))
     }
   </div>
