--- a/src/components/GoodbyeOverlay.astro
+++ b/src/components/GoodbyeOverlay.astro
@@ -1,6 +1,10 @@
+---
+const isDevelopMode = import.meta.env.DEV;
+---
+
 <div
   id="goodbye"
-  class="flex justify-center items-center z-50 fixed top-0 left-0 w-screen h-screen bg-sky-50 dark:bg-neutral-900 text-neutral-800 dark:text-neutral-200 hidden transition-all font-heading text-7xl"
+  class="flex justify-center items-center z-50 fixed top-0 left-0 w-screen h-screen bg-sky-50 text-neutral-800 hidden transition-all font-heading text-7xl"
 >
   Goodbye
 </div>
@@ -42,8 +46,10 @@
     clearInterval(goodbyeInterval);
   };
 
-  document.addEventListener("mouseleave", addGoodbyeElement);
-  document
-    .getElementById("goodbye")
-    .addEventListener("mouseover", removeGoodbyeElement);
+  if (!isDevelopMode) {
+    document.addEventListener("mouseleave", addGoodbyeElement);
+    document
+      .getElementById("goodbye")
+      .addEventListener("mouseover", removeGoodbyeElement);
+  }
 </script>
