--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,29 +3,24 @@ import Wrap from "./Wrap.astro";
 ---
 
 <Wrap>
-  <div class="flex flex-col md:flex-row justify-between items-center mb-16">
+  <div class="flex flex-row justify-between items-center mb-16">
     <a
       href="/"
-      class="font-heading text-2xl no-underline text-neutral-800 dark:text-neutral-200 hover:text-neutral-800 hover:dark:text-neutral-200 hover:decoration-4 hover:decoration-sky-400 flex items-center"
+      class="flex flex-col leading-5 font-heading text-2xl font-black no-underline text-neutral-900 hover:text-neutral-900 hover:no-underline uppercase"
     >
-      Edvin Lindén
+      <span class="animate-logofirst opacity-0">Edvin</span>
+      <span class="animate-logolast opacity-0">Lindén</span>
     </a>
-    <div class="mt-8 md:mt-0">
-      <a
-        href="/"
-        class="no-underline mr-4 font-heading text-2xl text-neutral-800 dark:text-neutral-200 hover:text-neutral-800 hover:dark:text-neutral-200 hover:decoration-4 hover:decoration-sky-400"
-      >
-        Home</a
-      >
+    <div class="flex flex-col md:flex-row items-end">
       <a
         href="/writing/"
-        class="no-underline mr-4 font-heading text-2xl text-neutral-800 dark:text-neutral-200 hover:text-neutral-800 hover:dark:text-neutral-200 hover:decoration-4 hover:decoration-sky-400"
+        class="no-underline md:mr-4 font-heading text-lg md:text-xl font-thin text-neutral-600 opacity-0 animate-fade-in-200"
       >
         Writing</a
       >
       <a
         href="/about/"
-        class="no-underline font-heading text-2xl text-neutral-800 dark:text-neutral-200 hover:text-neutral-800 hover:dark:text-neutral-200 hover:decoration-4 hover:decoration-sky-400"
+        class="no-underline font-heading text-lg md:text-xl font-thin text-neutral-600 opacity-0 animate-fade-in-200"
       >
         About</a
       >
