--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -5,6 +5,7 @@ import Header from "@components/Header.astro";
 import Articles from "@components/Articles.astro";
 import "../tailwind/base.css";
 import { formatDate } from "../utils";
+import Divider from "@components/Divider.astro";
 
 export interface Props {
   title: string;
@@ -23,7 +24,7 @@ const articles = await Astro.glob("../pages/writing/*.md");
 ---
 
 <!DOCTYPE html>
-<html lang="en" class="h-full mt-0">
+<html lang="en" class="h-full m-0 p-0">
   <head>
     <meta charset="UTF-8" />
     <meta name="generator" content={Astro.generator} />
@@ -39,36 +40,49 @@ const articles = await Astro.glob("../pages/writing/*.md");
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="icon" type="image/svg+xml" href="/images/smile.svg" />
     <style>
-      /* devanagari */
-      @font-face {
-        font-family: "Bakbak One";
-        font-style: normal;
-        font-weight: 400;
-        src: url(https://fonts.gstatic.com/s/bakbakone/v6/zOL54pXAl6RI-p_ardnu-cJkvspEgOrYfQ.woff2)
-          format("woff2");
-        unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D,
-          U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
-      }
       /* latin-ext */
       @font-face {
-        font-family: "Bakbak One";
+        font-family: "Geologica";
         font-style: normal;
         font-weight: 400;
-        src: url(https://fonts.gstatic.com/s/bakbakone/v6/zOL54pXAl6RI-p_ardnu-c1kvspEgOrYfQ.woff2)
-          format("woff2");
-        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
-          U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+        font-display: swap;
+        src: url(/fonts/geologica-latin-ext.woff2) format("woff2");
+        unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F,
+          U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
+          U+A720-A7FF;
       }
       /* latin */
       @font-face {
-        font-family: "Bakbak One";
+        font-family: "Geologica";
         font-style: normal;
         font-weight: 400;
-        src: url(https://fonts.gstatic.com/s/bakbakone/v6/zOL54pXAl6RI-p_ardnu-cNkvspEgOo.woff2)
-          format("woff2");
+        font-display: swap;
+        src: url(/fonts/geologica-latin.woff2) format("woff2");
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
-          U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
-          U+2212, U+2215, U+FEFF, U+FFFD;
+          U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC,
+          U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+      }
+      /* latin-ext */
+      @font-face {
+        font-family: "Geologica";
+        font-style: normal;
+        font-weight: 900;
+        font-display: swap;
+        src: url(/fonts/geologica-latin-ext.woff2) format("woff2");
+        unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F,
+          U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
+          U+A720-A7FF;
+      }
+      /* latin */
+      @font-face {
+        font-family: "Geologica";
+        font-style: normal;
+        font-weight: 900;
+        font-display: swap;
+        src: url(/fonts/geologica-latin.woff2) format("woff2");
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
+          U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC,
+          U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
       }
     </style>
     <title>{title} – Edvin Lindén</title>
@@ -76,24 +90,29 @@ const articles = await Astro.glob("../pages/writing/*.md");
   <body class="flex flex-col h-full">
     <Header />
     <Wrap cls="flex flex-col flex-grow">
-      <article>
-        <h1 class="mb-4 text-center sm:text-left">{title}</h1>
-        <div
-          class="mb-8 text-xs text-center sm:text-left text-neutral-500 dark:text-neutral-600"
-        >
-          <span class="mr-2">{formatDate(date)}</span>⋅<span class="ml-2"
-            >{readingTime} reading time</span
+      <article class="flex flex-col items-center">
+        <div class="w-full md:w-[720px]">
+          <h1 class="mb-8 md:text-center">{title}</h1>
+          <div
+            class="mb-16 md:text-center uppercase tracking-wider text-2xs font-normal text-neutral-500"
           >
+            <span class="mr-2">{formatDate(date)}</span>⋅<span class="ml-2"
+              >{readingTime} reading time</span
+            >
+          </div>
+          <slot />
         </div>
-        <slot />
       </article>
+    </Wrap>
+    <Wrap>
+      <Divider text="Continue reading" />
     </Wrap>
     <Articles
       headline="Continue reading"
       articles={articles
         .filter((article) => article.frontmatter.title != title)
         .sort(() => 0.5 - Math.random())
-        .slice(0, 2)}
+        .slice(0, 3)}
     />
     <Footer />
   </body>
