--- a/src/layouts/FirstPage.astro
+++ b/src/layouts/FirstPage.astro
@@ -14,11 +14,13 @@ const { title, description } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<head>
-  <PageMeta title={title} description={description} />
-</head>
-<body class="flex flex-col h-full">
-  <Header />
-  <slot />
-  <Footer />
-</body>
+<html lang="en" class="h-full m-0 p-0">
+  <head>
+    <PageMeta title={title} description={description} />
+  </head>
+  <body class="flex flex-col h-full">
+    <Header />
+    <slot />
+    <Footer />
+  </body>
+</html>
