--- a/src/pages/writing/index.astro
+++ b/src/pages/writing/index.astro
@@ -10,32 +10,31 @@ const articles = await Astro.glob("./*.md");
   title="Things I've written"
   description="Things written by Edvin Lindén, mostly about side projects such as app development."
 >
-  <Wrap>
-    <div class="flex flex-col justify-between mt-16 mb-24">
-      {
-        articles
-          .sort((a, b) => {
-            return (
-              new Date(b.frontmatter.date).valueOf() -
-              new Date(a.frontmatter.date).valueOf()
-            );
-          })
-          .map((article) => (
-            <div class="flex flex-col mb-16">
-              <a href={article.url} class="no-underline hover:decoration-4">
-                <h2 class="mt-0 mb-2">{article.frontmatter.title}</h2>
-              </a>
-              <div class="mb-4 text-xs text-neutral-500 dark:text-neutral-600">
-                <span class="mr-2">{formatDate(article.frontmatter.date)}</span>
-                ⋅
-                <span class="ml-2">
-                  {article.frontmatter.readingTime} reading time
-                </span>
-              </div>
-              <p class="my-0">{article.frontmatter.description}</p>
+  <div class="flex flex-col w-full justify-between mt-16 mb-24">
+    {
+      articles
+        .sort((a, b) => {
+          return (
+            new Date(b.frontmatter.date).valueOf() -
+            new Date(a.frontmatter.date).valueOf()
+          );
+        })
+        .map((article) => (
+          <div class="flex flex-col mb-8">
+            <a
+              href={article.url}
+              class="no-underline hover:decoration-4 flex-grow"
+            >
+              <h2 class="mt-0 mb-2 text-2xl">{article.frontmatter.title}</h2>
+            </a>
+            <div class="flex flex-row text-xs text-left text-neutral-500">
+              <span class="mr-2">{formatDate(article.frontmatter.date)}</span>⋅
+              <span class="ml-2">
+                {article.frontmatter.readingTime} reading time
+              </span>
             </div>
-          ))
-      }
-    </div>
-  </Wrap>
+          </div>
+        ))
+    }
+  </div>
 </Page>
