--- a/src/tailwind/base.css
+++ b/src/tailwind/base.css
@@ -5,41 +5,41 @@
     @apply text-[20px] pt-8;
   }
   body {
-    @apply bg-sky-50 dark:bg-neutral-900 font-sans font-light text-[20px] pt-8 text-neutral-700 dark:text-neutral-400;
+    @apply bg-neutral-50 font-sans font-light text-[20px] pt-8 text-neutral-500;
   }
   h1 {
-    @apply mt-12 mb-4 text-3xl sm:text-5xl font-heading font-bold tracking-wide no-underline text-neutral-800 dark:text-neutral-200;
+    @apply mt-12 mb-4 text-3xl md:text-5xl  font-heading font-black tracking-tight no-underline text-neutral-800;
   }
   h2 {
-    @apply mt-12 mb-4 text-2xl sm:text-4xl font-heading font-bold tracking-wide no-underline text-neutral-800 dark:text-neutral-200;
+    @apply mt-12 mb-4 text-xl md:text-3xl font-heading font-black tracking-wide no-underline text-neutral-800;
   }
   h3 {
-    @apply mt-12 mb-4 text-xl sm:text-3xl font-heading font-medium tracking-wide no-underline text-neutral-800 dark:text-neutral-200;
+    @apply mt-12 mb-4 text-lg md:text-xl font-heading font-bold tracking-wide no-underline text-neutral-800;
   }
   h4 {
-    @apply mt-12 mb-4 text-xl sm:text-3xl text-base font-heading font-medium tracking-wide no-underline text-neutral-800 dark:text-neutral-200;
+    @apply mt-12 mb-4 text-base md:text-lg text-base font-heading font-medium tracking-wide no-underline text-neutral-800;
   }
   a {
-    @apply underline underline-offset-4 decoration-1 text-sky-600;
+    @apply underline underline-offset-8 decoration-2;
   }
   a:hover {
-    @apply underline underline-offset-4 decoration-1 text-sky-400 dark:text-sky-400;
+    @apply underline underline-offset-8 decoration-2 text-sky-500 decoration-neutral-500;
   }
   p {
     @apply my-4 text-base;
   }
   mark {
-    @apply bg-yellow-200 text-neutral-800 dark:text-neutral-800 italic px-1;
+    @apply bg-yellow-200 text-neutral-800 italic px-1;
   }
 
   article {
     @apply mb-24;
 
-    animation: fade-in 1000ms ease-in-out;
+    animation: fade-in-and-up 1000ms ease-in-out;
   }
-  
+
   blockquote {
-    @apply pl-4 border-l-4 border-neutral-300 dark:border-neutral-500 text-neutral-500;
+    @apply pl-4 border-l-4 border-neutral-300 text-neutral-500;
   }
 
   main {
@@ -47,7 +47,7 @@
   }
 }
 
-@keyframes fade-in {
+@keyframes fade-in-and-up {
   0% {
     opacity: 0;
     transform: translateY(1rem);
