--- a/src/components/GoodbyeOverlay.astro
+++ b/src/components/GoodbyeOverlay.astro
@@ -1,15 +1,12 @@
----
-const isDevelopMode = import.meta.env.DEV;
----
-
 <div
   id="goodbye"
-  class="flex justify-center items-center z-50 fixed top-0 left-0 w-screen h-screen bg-sky-50 text-neutral-800 hidden transition-all font-heading text-7xl"
+  class="flex justify-center items-center z-50 fixed top-0 left-0 w-screen h-screen bg-neutral-50 text-neutral-800 hidden transition-all font-heading font-black text-7xl"
 >
   Goodbye
 </div>
 
 <script>
+  const isDevelopMode = import.meta.env.DEV;
   let goodbyeInterval = null;
   const goodbyeList = [
     "Goodbye",
