--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const articles = await Astro.glob("./writing/*.md");
     innerCls="relative"
   >
     <img
-      class="opacity-0 animate-portrait-rotate transition-all rounded-xl absolute bottom-44 md:bottom-40 lg:bottom-48 2xl:bottom-auto 2xl:top-80 left-0 md:left-auto md:right-16 2xl:right-auto 2xl:left-16 z-50 drop-shadow-2xl"
+      class="opacity-0 animate-portrait-rotate transition-all rounded-xl absolute bottom-44 md:bottom-40 lg:bottom-48 2xl:bottom-60 left-0 md:left-auto md:right-16 2xl:right-auto 2xl:left-[1000px] z-50 drop-shadow-2xl"
       src="/images/edvin-mini-compressed.webp"
       alt="Photograph of Edvin Lindén"
     />
