--- a/src/pages/the-box-timer/privacy-policy.astro
+++ b/src/pages/the-box-timer/privacy-policy.astro
@@ -9,7 +9,7 @@ import Page from "@layouts/Page.astro";
 >
   <h2>Privacy Policy</h2>
 
-  <p>Updated January 20, 2021</p>
+  <p>Updated March 11, 2024</p>
   <p>
     The privacy policy of The Box Timer is very simple – I do not collect any
     personal information about you!
@@ -19,5 +19,14 @@ import Page from "@layouts/Page.astro";
     share as little as possible. In order for me to operate the app and for you
     to use it there's no need to share any personal information. It's <i>just</i
     > a timer after all.
+  </p>
+  <p>
+    I may update the Privacy Policy, you are advised to review this page
+    periodically for any changes. I will notify you of any changes by posting
+    the new Privacy Policy on this page.
+  </p>
+  <p>
+    If you have any questions about the Privacy Policy, do not hesitate to
+    contact me at help@boxtimer.app
   </p>
 </Page>
