--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,20 +12,40 @@ const articles = await Astro.glob("./writing/*.md");
   title="Home"
   description="Edvin Lindén is a Product Manager at Fortnox that spends his time outside work creating things for digital devices."
 >
-  <Wrap
-    cls="flex items-end h-[60vh] min-h-[60vh] mt-8 mb-16 md:mt-16 md:mb-24 overflow-x-clip"
-    innerCls="relative"
-  >
-    <img
-      class="opacity-0 animate-portrait-rotate transition-all rounded-xl absolute bottom-44 md:bottom-40 lg:bottom-48 2xl:bottom-60 left-0 md:left-auto md:right-16 2xl:right-auto 2xl:left-[1000px] z-50 drop-shadow-2xl"
-      src="/images/edvin-mini-compressed.webp"
-      alt="Photograph of Edvin Lindén"
-    />
-    <h1
-      class="font-heading text-4xl md:text-6xl lg:7xl xl:text-8xl text-neutral-900 mb-8 tracking-tight font-black opacity-0 animate-fade-in relative z-0"
-    >
-      Product Leader <br />& App Developer
-    </h1>
+  <Wrap cls="pt-0 pb-12" innerCls="flex flex-col items-center">
+    <div class="w-full md:w-[960px] flex flex-col lg:flex-row items-center">
+      <img
+        class="rounded-xl drop-shadow-2xl h-[500px] w-full lg:w-auto max-w-[500px] object-cover opacity-0 animate-fade-in"
+        src="/images/edvin-linden-2024.webp"
+        alt="Photograph of Edvin Lindén"
+      />
+      <div
+        class="lg:ml-8 opacity-0 animate-fade-in max-w-[720px] lg:max-w-auto"
+      >
+        <h1 class="font-heading text-4xl text-neutral-900 mb-8 tracking-tight">
+          Hello, I'm Edvin!
+        </h1>
+        <p>
+          I am a product leader at
+          <a
+            href="https://fortnox.se"
+            target="_blank"
+            title="Fortnox"
+            rel="noopener noreferrer"
+          >
+            Fortnox</a
+          >, making products that help businesses become more successful. To get
+          a bit more specific I work a lot with strategy, business design and
+          helping our organization navigate the market.
+        </p>
+
+        <p>
+          Spending my work hours thinking and talking about products (but not
+          actually creating them my self), I sometimes have the need to do so on
+          my time off. Here's some of the things I've done recently.
+        </p>
+      </div>
+    </div>
   </Wrap>
   <Wrap>
     <Divider text="Highlights" />
