Upgrade Tailwind to version 4

--- a/src/components/Articles.astro
+++ b/src/components/Articles.astro
@@ -18,7 +18,7 @@ const { headline, articles } = Astro.props;
           <div class="flex flex-col mb-8">
             <a
               href={article.url}
-              class="no-underline hover:decoration-4 flex-grow"
+              class="no-underline hover:decoration-4 grow"
             >
               <h2 class="mt-0 mb-2 text-xl">{article.frontmatter.title}</h2>
             </a>
