--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -89,7 +89,7 @@ const articles = await Astro.glob("../pages/writing/*.md");
   </head>
   <body class="flex flex-col h-full">
     <Header />
-    <Wrap cls="flex flex-col flex-grow">
+    <Wrap cls="flex flex-col grow">
       <article class="flex flex-col items-center">
         <div class="w-full md:w-[720px]">
           <h1 class="mb-8 md:text-center">{title}</h1>
