--- a/src/layouts/FullPage.astro
+++ b/src/layouts/FullPage.astro
@@ -22,7 +22,7 @@ const { title, description, headline } = Astro.props;
   <body class="flex flex-col h-full">
     <Header />
     <main>
-      <Wrap cls="flex flex-col flex-grow">
+      <Wrap cls="flex flex-col grow">
         <h1 class="mb-8">
           {headline ? headline : title}
         </h1>
