--- a/src/pages/writing/index.astro
+++ b/src/pages/writing/index.astro
@@ -23,7 +23,7 @@ const articles = await Astro.glob("./*.md");
           <div class="flex flex-col mb-8">
             <a
               href={article.url}
-              class="no-underline hover:decoration-4 flex-grow"
+              class="no-underline hover:decoration-4 grow"
             >
               <h2 class="mt-0 mb-2 text-2xl">{article.frontmatter.title}</h2>
             </a>
